# automagic

./: LICENSE  README.rst  pyproject.toml
automagic/: autoreload.py  cli.py  harness.py  important.py
tests/: test_automagic.py
