[tool.poetry]
name = "automagic"
version = "0.1.0"
description = ""
authors = ["Christopher Chambers <chris@peanutcode.com>"]

[tool.poetry.scripts]
automagic = 'automagic.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
lyre = "^0.1.1"
magazine = {git = "https://github.com/chris-chambers/magazine.git"}
fswatch = "^0.1.1"
trio = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
